Opened 13 years ago
Closed 13 years ago
#3042 closed defect (fixed)
RealMedia streaming: assertion failed "rm->audio_pkt_cnt > 0" (libavformat/rmdec.c:879)
| Reported by: | Underground78 | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | rtsp real regression crash abort |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Playing that RealMedia stream: rtsp://apreal03.triara.com/broadcast/canalcongreso.rm leads to a failed assertion "rm->audio_pkt_cnt > 0" at https://github.com/FFmpeg/FFmpeg/blob/ad2a08388c82bdec5ac9355ca6e0bc4c98b26423/libavformat/rmdec.c#L879.
How to reproduce:
> ffplay rtsp://apreal03.triara.com/broadcast/canalcongreso.rm
ffplay version N-56980-g1ab9f32 Copyright (c) 2003-2013 the FFmpeg developers
built on Oct 8 2013 18:02:10 with gcc 4.8.1 (GCC)
configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-avisynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetype --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libx264 --enable-libxavs --enable-libxvid --enable-zlib
libavutil 52. 46.101 / 52. 46.101
libavcodec 55. 35.100 / 55. 35.100
libavformat 55. 19.100 / 55. 19.100
libavdevice 55. 4.100 / 55. 4.100
libavfilter 3. 88.101 / 3. 88.101
libswscale 2. 5.101 / 2. 5.101
libswresample 0. 17.103 / 0. 17.103
libpostproc 52. 3.100 / 52. 3.100
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
This application has requested the Runtime to terminate it in an unusual way.
Please contact the application's support team for more information.
Assertion rm->audio_pkt_cnt > 0 failed at /home/kyle/software/ffmpeg/source/ffmpeg-git/libavformat/rmdec.c:879
Change History (7)
comment:1 by , 13 years ago
| Keywords: | rtsp real regression crash abort added |
|---|---|
| Priority: | normal → important |
| Reproduced by developer: | set |
| Status: | new → open |
follow-up: 5 comment:2 by , 13 years ago
./ffplay 'rtsp://apreal03.triara.com/broadcast/canalcongreso.rm' Connection to tcp://apreal03.triara.com:554?timeout=0 failed: Connection refused rtsp://apreal03.triara.com/broadcast/canalcongreso.rm: Input/output error
comment:3 by , 13 years ago
$ ffplay rtsp://apreal03.triara.com/broadcast/canalcongreso.rm
ffplay version N-57391-g1b3a7e1 Copyright (c) 2003-2013 the FFmpeg developers
built on Oct 24 2013 15:22:13 with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl
libavutil 52. 47.101 / 52. 47.101
libavcodec 55. 38.101 / 55. 38.101
libavformat 55. 19.104 / 55. 19.104
libavdevice 55. 5.100 / 55. 5.100
libavfilter 3. 89.100 / 3. 89.100
libswscale 2. 5.101 / 2. 5.101
libswresample 0. 17.104 / 0. 17.104
libpostproc 52. 3.100 / 52. 3.100
Truncating packet of size 8561 to 26
[rdt @ 0x7f9428008080] Impossibly sized packet
Truncating packet of size 8561 to 26
[rdt @ 0x7f9428008080] Impossibly sized packet
Truncating packet of size 8561 to 26
[rdt @ 0x7f9428008080] Impossibly sized packet
[...]
Truncating packet of size 405 to 26
[rdt @ 0x7f9428008080] Impossibly sized packet
Truncating packet of size 405 to 26
[rdt @ 0x7f9428008080] Impossibly sized packet
Truncating packet of size 28 to 26
[rdt @ 0x7f9428008080] Impossibly sized packet
[rtsp @ 0x7f9428000920] Could not find codec parameters for stream 1 (Video: rv40 (RV40 / 0x30345652), yuv420p, 720x480): no frame in rv30/40 and no sar
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, rtsp, from 'rtsp://apreal03.triara.com/broadcast/canalcongreso.rm':
Metadata:
title : canalcongreso.rm
comment : <No author> <No copyright>
Duration: N/A, start: 0.000000, bitrate: 76 kb/s
Stream #0:0: Video: rv40 (RV40 / 0x30345652), yuv420p, 720x480, 60 kb/s, 15 fps, 15 tbr, 1k tbn, 1k tbc
Stream #0:1: Video: rv40 (RV40 / 0x30345652), yuv420p, 720x480, 15 fps, 15 tbr, 1k tbn, 1k tbc
Stream #0:2: Audio: cook (cook / 0x6B6F6F63), 22050 Hz, stereo, fltp, 16 kb/s
[rv40 @ 0x7f94280c0560] First slice header is incorrect
[rv40 @ 0x7f9428093c80] Context scratch buffers could not be allocated due to unknown size.
[rv40 @ 0x7f9428093c80] First slice header is incorrect
[rv40 @ 0x7f94280db040] Context scratch buffers could not be allocated due to unknown size.
[rv40 @ 0x7f94280db040] First slice header is incorrect
[rv40 @ 0x7f94280f9660] Context scratch buffers could not be allocated due to unknown size.
[...]
[rv40 @ 0x7f9428093c80] First slice header is incorrect
[rv40 @ 0x7f94280db040] Context scratch buffers could not be allocated due to unknown size.
[rv40 @ 0x7f94280db040] First slice header is incorrect
[rv40 @ 0x7f94280f9660] Context scratch buffers could not be allocated due to unknown size.
[rv40 @ 0x7f94280f9660] First slice header is incorrect
[rtsp @ 0x7f9428000920] method PLAY failed: 501 Not Implemented/0
Assertion rm->audio_pkt_cnt > 0 failed at libavformat/rmdec.c:877
[rv40 @ 0x7f942822c900] Context scratch buffers could not be allocated due to unknown size.
Aborted
comment:4 by , 13 years ago
I believe it is noteworthy that the following plays very nice while FFmpeg 2.0 plays no sound and looses many frames:
$ mplayer rtsp://apreal03.triara.com/broadcast/canalcongreso.rm -demuxer lavf -vc ffrv40 -ac ffcook
comment:5 by , 13 years ago
Replying to michael:
./ffplay 'rtsp://apreal03.triara.com/broadcast/canalcongreso.rm' Connection to tcp://apreal03.triara.com:554?timeout=0 failed: Connection refused rtsp://apreal03.triara.com/broadcast/canalcongreso.rm: Input/output error
Disregard this, this is my ISP (A1 austria blocking port 554 apparently)
comment:6 by , 13 years ago
assertion fixed in f7106e00f7f1f8879c1fe827dbbc60936a19d6ea
the not so well working playback of that rtsp stream seems a seperate issue and seems no regresion
maybe soemeone should open a new ticket for that and close this one
comment:7 by , 13 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |



Regression since aecb9d3.